1552 UI Issue – Quick Action Icons Misaligned with Long Client Name

--- a/src/app/shared/components/table/table.component.scss
+++ b/src/app/shared/components/table/table.component.scss
@@ -15,6 +15,11 @@
 :host {
   --custom-red: #fc1e1e;
   &::ng-deep {
+    td {
+      white-space: normal;
+      word-break: break-all;
+      overflow-wrap: anywhere;
+    }
     img[alt="side"],
     img[alt="delete"],
     img[alt="edit"],
